crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__render_entity_with_schema_snapshots@username_fk_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests.rs
expression: rendered
---
from __future__ import annotations

from uuid import UUID

from sqlmodel import Field, SQLModel


class Session(SQLModel, table=True):
    __tablename__ = "session"

    id: UUID = Field(primary_key=True)
    username: str = Field(foreign_key="user.username")
