crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reserved_word_identifiers_snapshot@reserved_word_identifiers_Drizzle_pg.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
export const order = pgTable("order", {
  id: integer("id").primaryKey(),
  user: text("user").notNull(),
  select: integer("select").notNull(),
});
