crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reserved_word_identifiers_snapshot@reserved_word_identifiers_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
assertion_line: 239
expression: rendered
---
model Order {
  id Int @id
  user String
  select Int

  @@map("order")
}
